# MRK-Android-Dev

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/github/mrkdagods/mrkandroidhaxexternal/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/mrk/: ExpTest.h  MRKApplication.cpp  MRKApplication.h  MRKColor.cpp  MRKColor.h  MRKCommon.h  MRKLog.cpp  MRKLog.h  MRKNativeMain.cpp  MRKProxy.cpp  MRKProxy.h  MRKResources.h  MRKStringStore.cpp  MRKStringStore.h  MRKTouchEvent.h
app/src/main/cpp/mrk/components/: LMSGuiMain.cpp  MRKGuiComponent.cpp  MRKGuiComponent.h  MRKGuiComponentDebugger.cpp  MRKGuiComponentDebugger.h  MRKGuiComponentLoader.cpp  MRKGuiComponentLoader.h
app/src/main/cpp/mrk/components/DT2/: MRKGuiComponentBaseDT2_REF.cpp  MRKGuiComponentBaseDT2_REF.h
app/src/main/cpp/mrk/dynamic/: LMSDynamic.cpp  LMSDynamic.h  MRKDynamic.cpp  MRKDynamic.h
app/src/main/cpp/mrk/gui/: Entypo.h  MRKDisplay.cpp  MRKDisplay.h  MRKFont.h  MRKGUI.cpp  MRKGUI.h  MRKGuiBaseButton.cpp  MRKGuiBaseButton.h  MRKGuiBaseButtonEx.cpp  MRKGuiBaseButtonEx.h  MRKGuiBaseImageSelector.cpp  MRKGuiBaseImageSelector.h  MRKGuiBaseLabel.cpp  MRKGuiBaseLabel.h  MRKGuiBaseSlider.cpp  MRKGuiBaseSlider.h  MRKGuiBaseWidget.cpp  MRKGuiBaseWidget.h  MRKGuiBaseWindow.cpp  MRKGuiBaseWindow.h  MRKTheme.cpp  MRKTheme.h
app/src/main/cpp/mrk/logger/: MRKLogcatLogger.hpp
app/src/main/cpp/mrk/math/: MRKMath.cpp  MRKMath.h  Rect.h  Vector2.h  Vector3.h
app/src/main/cpp/mrk/mono/: LMSMonoAPI.cpp  LMSMonoAPI.h  LMSMonoCore.cpp  MRKMonoAPI.cpp  MRKMonoAPI.h  MRKMonoCore.cpp
app/src/main/cpp/mrk/utils/: DupSafeVector.hpp  MRKUtils.cpp  MRKUtils.h
app/src/main/cpp/mrk/utils/utf8_cpp/: core.h  unchecked.h
app/src/main/cpp/mrkproxy/: MRKCommon.h  MRKDynamic.cpp  MRKDynamic.h  MRKProxyDynamic.cpp  MRKProxyDynamic.h  MRKProxyMGUI.h  MRKUIExample.cpp  MRKUIExample2.cpp
app/src/main/cpp/mrkui/: MRKUI.c  MRKUI.h  MRKUIGL.h  MRKUIGLUtils.h  fontstash.h
app/src/main/cpp/obf/mrk/: ExpTest.h  MRKApplication.cpp  MRKApplication.h  MRKColor.cpp  MRKColor.h  MRKCommon.h  MRKLog.cpp  MRKLog.h  MRKNativeMain.cpp  MRKProxy.cpp  MRKProxy.h  MRKStringStore.cpp  MRKStringStore.h  MRKTouchEvent.h
app/src/main/cpp/obf/mrk/components/: LMSGuiMain.cpp  MRKGuiComponent.cpp  MRKGuiComponent.h  MRKGuiComponentDebugger.cpp  MRKGuiComponentDebugger.h  MRKGuiComponentLoader.cpp  MRKGuiComponentLoader.h
app/src/main/cpp/obf/mrk/dynamic/: LMSDynamic.cpp  LMSDynamic.h
app/src/main/cpp/obf/mrk/gui/: Entypo.h  MRKDisplay.cpp  MRKDisplay.h  MRKFont.h  MRKGUI.cpp  MRKGUI.h  MRKGuiBaseButton.cpp  MRKGuiBaseButton.h  MRKGuiBaseButtonEx.cpp  MRKGuiBaseButtonEx.h  MRKGuiBaseImageSelector.cpp  MRKGuiBaseImageSelector.h  MRKGuiBaseLabel.cpp  MRKGuiBaseLabel.h  MRKGuiBaseSlider.cpp  MRKGuiBaseSlider.h  MRKGuiBaseWidget.cpp  MRKGuiBaseWidget.h  MRKGuiBaseWindow.cpp  MRKGuiBaseWindow.h  MRKTheme.cpp  MRKTheme.h
app/src/main/cpp/obf/mrk/logger/: MRKLogcatLogger.hpp
app/src/main/cpp/obf/mrk/math/: MRKMath.cpp  MRKMath.h  Rect.h  Vector2.h  Vector3.h
app/src/main/cpp/obf/mrk/mono/: LMSMonoAPI.cpp  LMSMonoAPI.h  LMSMonoCore.cpp
app/src/main/cpp/obf/mrk/utils/: Concat.hpp  DupSafeVector.hpp  MRKUtils.cpp  MRKUtils.h
app/src/main/cpp/obf/mrk/utils/utf8_cpp/: core.h  unchecked.h
app/src/main/cpp/obf/mrkui/: MRKUI.c  MRKUI.h  MRKUIGL.h  MRKUIGLUtils.h  fontstash.h  stb_truetype.h
app/src/main/java/io/github/mrkdagods/mrkandroidhaxexternal/: MRKGLRenderer.java  MRKGLView.java  (+3 more)
app/src/main/res/layout/: activity_main.xml  mrkoverlay.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
